# zgameengine

./: CMakeLists.txt
src/: CMakeLists.txt
src/ecs/: CMakeLists.txt  component.h  entity.h  registry.h  system.h  typeid_generator.h
tests/ecs/: CMakeLists.txt  component_test.cpp
